# news-analytics-service

./: README.md  news-analytics-service.py  pyproject.toml
compose/: docker-compose.yml
